{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 202,
  "lineage": "7a4bdf59-f321-fb1f-6f5c-77943b34f086",
  "resources": [
    {
      "module": "module.ecs-eu",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:listener/app/eu-west-1-public-alb/61cd7db935be0295/bb09f7a15c819135",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:targetgroup/tf-20210213102947411000000001/e73dce8d8c1c376a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:642086856970:listener/app/eu-west-1-public-alb/61cd7db935be0295/bb09f7a15c819135",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:loadbalancer/app/eu-west-1-public-alb/61cd7db935be0295",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-eu.aws_lb_target_group.alb_target_group",
            "module.eu-west-1.aws_lb.public_alb",
            "module.eu-west-1.aws_security_group.private_security_group",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-eu",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:targetgroup/tf-20210213102947411000000001/e73dce8d8c1c376a",
            "arn_suffix": "targetgroup/tf-20210213102947411000000001/e73dce8d8c1c376a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:642086856970:targetgroup/tf-20210213102947411000000001/e73dce8d8c1c376a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20210213102947411000000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "eu-west-1_lb_tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "dependencies": [
            "module.eu-west-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-us",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:listener/app/us-east-1-public-alb/81eab8a0cb979641/753ae1a80307e35f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:targetgroup/tf-20210213102951896200000002/87df5867dc35072e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:642086856970:listener/app/us-east-1-public-alb/81eab8a0cb979641/753ae1a80307e35f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:loadbalancer/app/us-east-1-public-alb/81eab8a0cb979641",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-us.aws_lb_target_group.alb_target_group",
            "module.us-east-1.aws_lb.public_alb",
            "module.us-east-1.aws_security_group.private_security_group",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-us",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:targetgroup/tf-20210213102951896200000002/87df5867dc35072e",
            "arn_suffix": "targetgroup/tf-20210213102951896200000002/87df5867dc35072e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:642086856970:targetgroup/tf-20210213102951896200000002/87df5867dc35072e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20210213102951896200000002",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "us-east-1_lb_tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "dependencies": [
            "module.us-east-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0171d80b51c09e66f",
            "domain": "vpc",
            "id": "eipalloc-037aaad17c23ed432",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d6f6bb8c783e7ac7",
            "private_dns": "ip-10-1-3-102.ec2.internal",
            "private_ip": "10.1.3.102",
            "public_dns": "ec2-54-82-34-140.compute-1.amazonaws.com",
            "public_ip": "54.82.34.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04e8fea5b13a41977",
            "domain": "vpc",
            "id": "eipalloc-0dda4611805069f16",
            "network_border_group": "us-east-1",
            "network_interface": "eni-020b1d04aade2f3af",
            "private_dns": "ip-10-1-4-194.ec2.internal",
            "private_ip": "10.1.4.194",
            "public_dns": "ec2-34-205-158-4.compute-1.amazonaws.com",
            "public_ip": "34.205.158.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:internet-gateway/igw-0e10e6b5ae673c17d",
            "id": "igw-0e10e6b5ae673c17d",
            "owner_id": "642086856970",
            "tags": {
              "Name": "eu-west-1_gw"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "dependencies": [
            "module.eu-west-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:loadbalancer/app/eu-west-1-public-alb/61cd7db935be0295",
            "arn_suffix": "app/eu-west-1-public-alb/61cd7db935be0295",
            "dns_name": "eu-west-1-public-alb-671248748.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:642086856970:loadbalancer/app/eu-west-1-public-alb/61cd7db935be0295",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eu-west-1-public-alb",
            "security_groups": [
              "sg-02004f41c42bfaa5c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0801765c598435f0e"
              },
              {
                "subnet_id": "subnet-0ea15dfd2ec2e9ff7"
              }
            ],
            "subnets": [
              "subnet-0801765c598435f0e",
              "subnet-0ea15dfd2ec2e9ff7"
            ],
            "tags": {
              "Name": "eu-west-1_public_alb"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.eu-west-1.aws_security_group.private_security_group",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037aaad17c23ed432",
            "id": "nat-01ef7fe885d94fef7",
            "network_interface_id": "eni-0d6f6bb8c783e7ac7",
            "private_ip": "10.1.3.102",
            "public_ip": "54.82.34.140",
            "subnet_id": "subnet-0801765c598435f0e",
            "tags": {
              "Name": "eu-west-1_ngw_1"
            }
          },
          "dependencies": [
            "module.eu-west-1.aws_eip.ngw",
            "module.eu-west-1.aws_internet_gateway.gw",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dda4611805069f16",
            "id": "nat-02986253ad7f61665",
            "network_interface_id": "eni-020b1d04aade2f3af",
            "private_ip": "10.1.4.194",
            "public_ip": "34.205.158.4",
            "subnet_id": "subnet-0ea15dfd2ec2e9ff7",
            "tags": {
              "Name": "eu-west-1_ngw_2"
            }
          },
          "dependencies": [
            "module.eu-west-1.aws_eip.ngw",
            "module.eu-west-1.aws_internet_gateway.gw",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:network-acl/acl-0f3866550c74b7f4d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0f3866550c74b7f4d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "642086856970",
            "subnet_ids": [
              "subnet-052e2a8416a34cfea",
              "subnet-0801765c598435f0e",
              "subnet-0ea15dfd2ec2e9ff7",
              "subnet-0f5cde7ced50e5603"
            ],
            "tags": {
              "Name": "eu-west-1_public_nacl"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cad12684d07fe0fc",
            "owner_id": "642086856970",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ef7fe885d94fef7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eu-west-1_private_rt_1"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu-west-1.aws_eip.ngw",
            "module.eu-west-1.aws_internet_gateway.gw",
            "module.eu-west-1.aws_nat_gateway.ngw",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0be7122f7b2f35f95",
            "owner_id": "642086856970",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02986253ad7f61665",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eu-west-1_private_rt_2"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu-west-1.aws_eip.ngw",
            "module.eu-west-1.aws_internet_gateway.gw",
            "module.eu-west-1.aws_nat_gateway.ngw",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07973164254e6ad6f",
            "owner_id": "642086856970",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e10e6b5ae673c17d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eu-west-1_public_rt"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu-west-1.aws_internet_gateway.gw",
            "module.eu-west-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021f79ea9339c162c",
            "route_table_id": "rtb-0cad12684d07fe0fc",
            "subnet_id": "subnet-052e2a8416a34cfea"
          },
          "dependencies": [
            "module.eu-west-1.aws_eip.ngw",
            "module.eu-west-1.aws_internet_gateway.gw",
            "module.eu-west-1.aws_nat_gateway.ngw",
            "module.eu-west-1.aws_route_table.private_rt",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0828537cc7def16f6",
            "route_table_id": "rtb-0be7122f7b2f35f95",
            "subnet_id": "subnet-0f5cde7ced50e5603"
          },
          "dependencies": [
            "module.eu-west-1.aws_eip.ngw",
            "module.eu-west-1.aws_internet_gateway.gw",
            "module.eu-west-1.aws_nat_gateway.ngw",
            "module.eu-west-1.aws_route_table.private_rt",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01142d7723f27ada5",
            "route_table_id": "rtb-07973164254e6ad6f",
            "subnet_id": "subnet-0801765c598435f0e"
          },
          "dependencies": [
            "module.eu-west-1.aws_internet_gateway.gw",
            "module.eu-west-1.aws_route_table.public_rt",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9b2d452a7124906",
            "route_table_id": "rtb-07973164254e6ad6f",
            "subnet_id": "subnet-0ea15dfd2ec2e9ff7"
          },
          "dependencies": [
            "module.eu-west-1.aws_internet_gateway.gw",
            "module.eu-west-1.aws_route_table.public_rt",
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_subnet.public_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:security-group/sg-02004f41c42bfaa5c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02004f41c42bfaa5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210213102947414000000001",
            "name_prefix": "terraform-",
            "owner_id": "642086856970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eu-west-1_private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu-west-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:subnet/subnet-052e2a8416a34cfea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-052e2a8416a34cfea",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642086856970",
            "tags": {
              "Name": "eu-west-1_private_subnet_1"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "dependencies": [
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:subnet/subnet-0f5cde7ced50e5603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0f5cde7ced50e5603",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642086856970",
            "tags": {
              "Name": "eu-west-1_private_subnet_2"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "dependencies": [
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:subnet/subnet-0801765c598435f0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0801765c598435f0e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642086856970",
            "tags": {
              "Name": "eu-west-1_public_subnet_1"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "dependencies": [
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:subnet/subnet-0ea15dfd2ec2e9ff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0ea15dfd2ec2e9ff7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642086856970",
            "tags": {
              "Name": "eu-west-1_public_subnet_2"
            },
            "vpc_id": "vpc-0e4d644bb3a370fc8"
          },
          "dependencies": [
            "module.eu-west-1.aws_subnet.private_subnet",
            "module.eu-west-1.aws_vpc.main",
            "module.eu-west-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:vpc/vpc-0e4d644bb3a370fc8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08704ac04831e9d16",
            "default_route_table_id": "rtb-0114c7bc0fd0044af",
            "default_security_group_id": "sg-07104d0b50391a659",
            "dhcp_options_id": "dopt-04d8801ffb3776072",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e4d644bb3a370fc8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0114c7bc0fd0044af",
            "owner_id": "642086856970",
            "tags": {
              "Name": "eu-west-1_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c98e7b19cc10e66a",
            "domain": "vpc",
            "id": "eipalloc-071ae8c16e1e56d06",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fbf256aa97e9b4b1",
            "private_dns": "ip-10-0-3-160.ec2.internal",
            "private_ip": "10.0.3.160",
            "public_dns": "ec2-52-7-132-171.compute-1.amazonaws.com",
            "public_ip": "52.7.132.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0155d8e3d3d3ba73c",
            "domain": "vpc",
            "id": "eipalloc-0144a30d6d19d72c8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09552134e8f8e6227",
            "private_dns": "ip-10-0-4-41.ec2.internal",
            "private_ip": "10.0.4.41",
            "public_dns": "ec2-34-196-166-161.compute-1.amazonaws.com",
            "public_ip": "34.196.166.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:internet-gateway/igw-077dca76bf8ec0942",
            "id": "igw-077dca76bf8ec0942",
            "owner_id": "642086856970",
            "tags": {
              "Name": "us-east-1_gw"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "dependencies": [
            "module.us-east-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:642086856970:loadbalancer/app/us-east-1-public-alb/81eab8a0cb979641",
            "arn_suffix": "app/us-east-1-public-alb/81eab8a0cb979641",
            "dns_name": "us-east-1-public-alb-1239701118.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:642086856970:loadbalancer/app/us-east-1-public-alb/81eab8a0cb979641",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "us-east-1-public-alb",
            "security_groups": [
              "sg-07e1736422db6c536"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005c49de188df38cb"
              },
              {
                "subnet_id": "subnet-094cba416b889b8e8"
              }
            ],
            "subnets": [
              "subnet-005c49de188df38cb",
              "subnet-094cba416b889b8e8"
            ],
            "tags": {
              "Name": "us-east-1_public_alb"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.us-east-1.aws_security_group.private_security_group",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071ae8c16e1e56d06",
            "id": "nat-086c8a61a72e42aa1",
            "network_interface_id": "eni-0fbf256aa97e9b4b1",
            "private_ip": "10.0.3.160",
            "public_ip": "52.7.132.171",
            "subnet_id": "subnet-094cba416b889b8e8",
            "tags": {
              "Name": "us-east-1_ngw_1"
            }
          },
          "dependencies": [
            "module.us-east-1.aws_eip.ngw",
            "module.us-east-1.aws_internet_gateway.gw",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0144a30d6d19d72c8",
            "id": "nat-0b9c9249642213a8e",
            "network_interface_id": "eni-09552134e8f8e6227",
            "private_ip": "10.0.4.41",
            "public_ip": "34.196.166.161",
            "subnet_id": "subnet-005c49de188df38cb",
            "tags": {
              "Name": "us-east-1_ngw_2"
            }
          },
          "dependencies": [
            "module.us-east-1.aws_eip.ngw",
            "module.us-east-1.aws_internet_gateway.gw",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:network-acl/acl-0a51fa7510076db9a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0a51fa7510076db9a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "642086856970",
            "subnet_ids": [
              "subnet-005c49de188df38cb",
              "subnet-08df7512c80b90f22",
              "subnet-094cba416b889b8e8",
              "subnet-0ecba7741f17590ef"
            ],
            "tags": {
              "Name": "us-east-1_public_nacl"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0239c56c58b351c0b",
            "owner_id": "642086856970",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086c8a61a72e42aa1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1_private_rt_1"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-east-1.aws_eip.ngw",
            "module.us-east-1.aws_internet_gateway.gw",
            "module.us-east-1.aws_nat_gateway.ngw",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-060c2da3cd54d7fac",
            "owner_id": "642086856970",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9c9249642213a8e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1_private_rt_2"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-east-1.aws_eip.ngw",
            "module.us-east-1.aws_internet_gateway.gw",
            "module.us-east-1.aws_nat_gateway.ngw",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-042b562a8902da366",
            "owner_id": "642086856970",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077dca76bf8ec0942",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1_public_rt"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-east-1.aws_internet_gateway.gw",
            "module.us-east-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0453e1ccc2784561c",
            "route_table_id": "rtb-0239c56c58b351c0b",
            "subnet_id": "subnet-08df7512c80b90f22"
          },
          "dependencies": [
            "module.us-east-1.aws_eip.ngw",
            "module.us-east-1.aws_internet_gateway.gw",
            "module.us-east-1.aws_nat_gateway.ngw",
            "module.us-east-1.aws_route_table.private_rt",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb27a32b6badd08e",
            "route_table_id": "rtb-060c2da3cd54d7fac",
            "subnet_id": "subnet-0ecba7741f17590ef"
          },
          "dependencies": [
            "module.us-east-1.aws_eip.ngw",
            "module.us-east-1.aws_internet_gateway.gw",
            "module.us-east-1.aws_nat_gateway.ngw",
            "module.us-east-1.aws_route_table.private_rt",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042136e149fdda90d",
            "route_table_id": "rtb-042b562a8902da366",
            "subnet_id": "subnet-094cba416b889b8e8"
          },
          "dependencies": [
            "module.us-east-1.aws_internet_gateway.gw",
            "module.us-east-1.aws_route_table.public_rt",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecde7ff8e4f6522a",
            "route_table_id": "rtb-042b562a8902da366",
            "subnet_id": "subnet-005c49de188df38cb"
          },
          "dependencies": [
            "module.us-east-1.aws_internet_gateway.gw",
            "module.us-east-1.aws_route_table.public_rt",
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_subnet.public_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:security-group/sg-07e1736422db6c536",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e1736422db6c536",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210213102949140500000002",
            "name_prefix": "terraform-",
            "owner_id": "642086856970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1_private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-east-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:subnet/subnet-08df7512c80b90f22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08df7512c80b90f22",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642086856970",
            "tags": {
              "Name": "us-east-1_private_subnet_1"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "dependencies": [
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:subnet/subnet-0ecba7741f17590ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ecba7741f17590ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642086856970",
            "tags": {
              "Name": "us-east-1_private_subnet_2"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "dependencies": [
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:subnet/subnet-094cba416b889b8e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-094cba416b889b8e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642086856970",
            "tags": {
              "Name": "us-east-1_public_subnet_1"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "dependencies": [
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:subnet/subnet-005c49de188df38cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-005c49de188df38cb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642086856970",
            "tags": {
              "Name": "us-east-1_public_subnet_2"
            },
            "vpc_id": "vpc-0fe7266625f75bbd8"
          },
          "dependencies": [
            "module.us-east-1.aws_subnet.private_subnet",
            "module.us-east-1.aws_vpc.main",
            "module.us-east-1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642086856970:vpc/vpc-0fe7266625f75bbd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb115744ccbafae7",
            "default_route_table_id": "rtb-015a5148778424e31",
            "default_security_group_id": "sg-058c7f785fc4c97c8",
            "dhcp_options_id": "dopt-04d8801ffb3776072",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fe7266625f75bbd8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-015a5148778424e31",
            "owner_id": "642086856970",
            "tags": {
              "Name": "us-east-1_vpc"
            }
          }
        }
      ]
    }
  ]
}